sbuild (0.64.3-1) UNRELEASED; urgency=medium

  [ Wookey ]
  * sbuild:
    - Add support for multiarch builds (enable foreign arch 'arch' 
       if Build-Depends includes specific foo:arch dependency)

 -- Wookey <wookey@debian.org>  Sat, 20 Sep 2014 00:38:58 +0100

sbuild (0.64.2-1) unstable; urgency=low

  * Team upload.

  [ Colin Watson ]
  * buildd:
    - Unset some more locale environment variables, and sort these in the
      same order as the output of locale(1), to make it easier to compare
      visually.

  [ Luca Falavigna ]
  * sbuild-createchroot:
    - Allow to define custom suffixes in chroot names (Closes: #741727).
    - Allow to Define custom debootstrap variant (Closes: #715020).

  [ Christoph Biedl ]
  * lib/Sbuild/Build.pm:
    - Sort output of package content listing (Closes: #743773).

 -- Luca Falavigna <dktrkranz@debian.org>  Fri, 12 Sep 2014 20:02:46 +0200

sbuild (0.64.1-1) unstable; urgency=low

  [ Roger Leigh ]
  * New release.
  * sbuild:
    - sbuild-createchroot now works with perl 5.18 (Closes: #724858).
      Thanks to Alexander Chernyakhovsky for this patch, which corrects
      the use of File::Temp.  Thanks also to Paul Elliott and Václav
      Ovsík who also provided an equivalent patches.
    - Sbuild::Conf: Add missing File::Spec (Closes: #722012).  Thanks to
      Václav Ovsík for this patch.
    - Sbuild::Build: Remove perl 5.10 autoflush workaround; flushing works
      correctly wih perl 5.18.

 -- Roger Leigh <rleigh@debian.org>  Sun, 13 Oct 2013 19:35:57 +0100

sbuild (0.64.0-1) unstable; urgency=low

  [ Thorsten Glaser ]
  * Apply patch from Arnaud Patard to fix the uploader (Closes: #636477).
  * Make sample configuration entries actually work (Closes: #696840).
  * Avoid using undef as HASH reference (Closes: #696841).

  [ Philipp Kern ]
  * Forward port patches from the buildd-0.61.0 branch:
    - Buildd::Client: Don't change the cwd.
    - Buildd: Fix SSH control master restart.

  [ Roger Leigh ]